# HWSolana

./: Cargo.toml
cli/: index.ts  interaccion_smartcontract.ts  package.json
src/: lib.rs
